# quackverse

./: .gitignore  Makefile  README.md  fix_imports.py  fix_remaining_tests.py  flat.txt  pyproject.toml  pytest.ini  verify_installation.py
ducktyper/: README.md  pyproject.toml
ducktyper/src/ducktyper/: __init__.py  __main__.py  main.py  utils.py
ducktyper/src/ducktyper/commands/: __init__.py  assistant.py  certify.py  config.py  explain.py  list_cmd.py  new.py  run.py  teach.py  xp.py
ducktyper/tests/: __init__.py  conftest.py
quack-core/: GET-STARTED.md  README.md  __init__.py  pyproject.toml
quack-core/examples/: config_tooling_test.py  explicit_plugin_loading_example.py  http_adapter_usage.py  toolkit_usage.py
quack-core/examples/tools/: echo_tool.py  minimal_runner.py  run_echo_on_file.py
quack-core/src/: __init__.py  quack_policy.yaml
quack-core/src/quack_core/: __init__.py  config_base.py
quack-core/tests/: README.md  __init__.py  conftest.py  test_helper.py
quack-core/tests/test_adapters/: __init__.py  test_http_adapter.py
quack-core/tests/test_capabilities/: __init__.py  conftest.py  mocks.py  test_base.py  test_imports.py  test_mixins_integration.py  test_protocol.py  test_toolkit_integration.py  test_tools.py
quack-core/tests/test_cli/: __init__.py  mocks.py  test_bootstrap.py  test_config.py  test_context.py  test_error.py  test_formatting.py  test_interaction.py  test_logging.py  test_options.py  test_progress.py  test_terminal.py
quack-core/tests/test_config/: __init__.py  test_loader.py  test_models.py  test_utils.py
quack-core/tests/test_contracts/: __init__.py  test_artifacts.py  test_capabilities.py  test_dependency_boundaries.py  test_envelopes.py  test_schema_examples.py
quack-core/tests/test_errors/: __init__.py  test_base.py  test_handlers.py
quack-core/tests/test_fs/: __init__.py  test_atomic_wrapping.py  test_operations.py  test_path_utils.py  test_results.py  test_service.py  test_utils.py
quack-core/tests/test_http/: __init__.py  conftest.py  test_auth.py  test_config.py  test_integration.py  test_jobs.py  test_routes_jobs.py  test_routes_quackmedia.py  test_util.py
quack-core/tests/test_integration/: __init__.py  test_full_pipeline.py
quack-core/tests/test_integrations/: __init__.py
quack-core/tests/test_paths/: __init__.py  conftest.py  test_context.py  test_resolvers.py  test_service.py  test_utils.py
quack-core/tests/test_plugins/: __init__.py  test_discovery.py  test_explicit_loading.py  test_protocols.py  test_registry.py
quack-core/tests/test_prompt/: __init__.py  conftest.py  test_booster.py  test_enhancer.py  test_integration.py  test_plugin.py  test_registry.py  test_strategies.py  test_strategy_base.py
quack-core/tests/test_toolkit/: __init__.py  conftest.py  mocks.py  test_base.py  test_imports.py  test_mixins_integration.py  test_protocol.py  test_toolkit_integration.py  test_tools.py
quack-core/tests/test_tools/: __init__.py  conftest.py  mocks.py  test_base.py  test_imports.py  test_mixins_integration.py  test_protocol.py  test_toolkit_integration.py  test_tools.py
quack-core/tests/test_workflow/: __init__.py  example_test.py  test_results.py
quackcore/: pyproject.toml
quackcore/examples/: config_tooling_test.py  http_adapter_usage.py  toolkit_usage.py
quackcore/src/quackcore/: __init__.py
quackcore/tests/: README.md  __init__.py  conftest.py  test_helper.py
quackcore/tests/test_cli/: __init__.py  mocks.py  test_bootstrap.py  test_config.py  test_context.py  test_error.py  test_formatting.py  test_interaction.py  test_logging.py  test_options.py  test_progress.py  test_terminal.py
quackcore/tests/test_config/: __init__.py  test_loader.py  test_models.py  test_utils.py
quackcore/tests/test_errors/: __init__.py  test_base.py  test_handlers.py
quackcore/tests/test_fs/: __init__.py  test_atomic_wrapping.py  test_operations.py  test_path_utils.py  test_results.py  test_service.py  test_utils.py
quackcore/tests/test_http/: __init__.py  conftest.py  test_auth.py  test_config.py  test_integration.py  test_jobs.py  test_routes_jobs.py  test_routes_quackmedia.py  test_util.py
quackcore/tests/test_integration/: __init__.py  test_full_pipeline.py
quackcore/tests/test_integrations/: __init__.py
quackcore/tests/test_paths/: __init__.py  conftest.py  test_context.py  test_resolvers.py  test_service.py  test_utils.py
quackcore/tests/test_plugins/: __init__.py  test_discovery.py  test_protocols.py  test_registry.py
quackcore/tests/test_prompt/: __init__.py  conftest.py  test_booster.py  test_enhancer.py  test_integration.py  test_plugin.py  test_registry.py  test_strategies.py  test_strategy_base.py
quackcore/tests/test_toolkit/: __init__.py  conftest.py  mocks.py  test_base.py  test_imports.py  test_mixins.py  test_mixins_integration.py  test_protocol.py  test_toolkit_integration.py  test_tools.py
quackcore/tests/test_workflow/: __init__.py  example_test.py  test_results.py
quackster/: README.md  pyproject.toml
quackster/src/quackster/: __init__.py
quackster/tests/: __init__.py  conftest.py  pyproject.toml
quackster/tests/test_academy/: __init__.py  conftest.py  test_assignment.py  test_context.py  test_course.py  test_feedback.py  test_init.py  test_plugin.py  test_results.py  test_service.py  test_student.py
quackster/tests/test_core/: __init__.py  test_badges.py  test_certificates.py  test_github_api.py  test_models.py  test_quests.py  test_utils.py  test_xp.py
quackster/tests/test_gamification/: __init__.py  test_badges.py  test_base.py  test_events.py  test_quests.py  test_service.py
quackster/tests/test_github/: __init__.py  test_grading.py  test_teaching_adapter.py  test_teaching_service.py
quackster/tests/test_npc/: __init__.py  test_dialogue.py  test_memory.py  test_persona.py
src/ducktyper/: README.md  __init__.py  __main__.py  main.py  pyproject.toml  utils.py
src/ducktyper/commands/: __init__.py  assistant.py  certify.py  config.py  explain.py  list_cmd.py  new.py  run.py  xp.py
src/ducktyper/ui/: __init__.py  branding.py  mode.py  styling.py
(+1947 files in other folders)
