# pyproject.toml
[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

# This is a meta-package for development only, not published to PyPI
[project]
name = "quackverse"
version = "0.1.0"
description = "Development environment for the QuackVerse ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Rod Rivera", email = "rod@aiproduct.engineer" }
]

# Development dependencies shared across all packages
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "isort",
    "black>=23.0.0",
    "hypothesis",
]

[project.urls]
"Homepage" = "https://github.com/ducktyper-ai/quackverse"
"Bug Tracker" = "https://github.com/ducktyper-ai/quackverse/issues"

# This is the key part for monorepo support
[tool.hatch.build]
# Skip building this package, as it's just a development wrapper
skip-excluded-dirs = true
exclude = [
    "/tests",
    "/.venv",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.hypothesis",
    "/.idea",
]

# Shared configuration for all subpackages
[tool.hatch.build.targets.wheel]
packages = ["quack_core", "ducktyper", "quackster"]

# Define no source package since this is a monorepo metapackage
[tool.hatch.build.targets.sdist]
exclude = ["*"]  # Exclude everything from the sdist

# Shared tool configurations
[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "A",   # flake8-builtins
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]  # Disable S101 (assert warning) in test files

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["quack-core/tests", "ducktyper/tests", "quackster/tests"]
python_files = ["test_*.py"]
filterwarnings = ["error"]