# quackverse/quackcore/pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quackcore"
version = "0.1.0"
description = "Core infrastructure for the Quack ecosystem of media production tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Rod Rivera", email = "rod@aiproduct.engineer" }
]
keywords = [
    "automation",
    "content-creation",
    "media-production",
    "workflows",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: AGPL-3.0 License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "rich>=13.6.0",
    "tqdm",
    "Jinja2",
    "pydantic[email]",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "isort",
    "hatchling",
    "black>=23.0.0",
    "hypothesis",
    "python-docx"
]
gmail = [
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.4.0",
]
notion = [
    "notion-client>=1.0.0",
]
google = [
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.4.0",
]
drive = [
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.4.0",
]
pandoc = ["pypandoc", "beautifulsoup4"]
llms = ["tiktoken", "openai", "anthropic"]
all = [
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.4.0",
    "notion-client>=1.0.0",
    "pypandoc",
    "beautifulsoup4",
    "tiktoken",
    "openai",
    "anthropic",
]

[project.urls]
"Homepage" = "https://github.com/ducktyper-ai/quackverse"
"Bug Tracker" = "https://github.com/ducktyper-ai/quackverse/issues"

[tool.hatch.version]
path = "src/quackcore/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/quackcore"]

[project.entry-points."quackcore.plugins"]
paths = "quackcore.paths.plugin:create_plugin"
fs = "quackcore.fs.plugin:create_plugin"
config = "quackcore.config.plugin:create_plugin"
prompt = "quackcore.prompt.plugin:create_plugin"

[tool.coverage.run]
source = ["quackcore"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]