[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quackster"
version = "0.1.0"
description = "Teaching and learning components for the QuackVerse ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Rod Rivera", email = "rod@aiproduct.engineer" },
    { name = "AI Product Engineer Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "quackcore>=0.1.0",
    "rich>=10.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=23.0.0",
    "hatchling",
]
llms = [
    "tiktoken",
    "openai",
    "anthropic",
]
all = [
    "tiktoken",
    "openai",
    "anthropic",
]

[project.urls]
"Homepage" = "https://github.com/ducktyper-ai/quackverse"
"Bug Tracker" = "https://github.com/ducktyper-ai/quackverse/issues"

[tool.hatch.version]
path = "src/quackster/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/quackster"]

[project.entry-points."quackcore.teaching"]
quackster = "quackster.plugin:create_plugin"

[tool.coverage.run]
source = ["quackster"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]